# types/magosproject/v1alpha1/zz_generated.deepcopy.go
@@ -35,6 +35,11 @@ func (in *JobOverrides) DeepCopyInto(out *JobOverrides) {
 			(*out)[key] = val
 		}
 	}
+	if in.TimeoutSeconds != nil {
+		in, out := &in.TimeoutSeconds, &out.TimeoutSeconds
+		*out = new(int64)
+		**out = **in
+	}
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new JobOverrides.
